# HypnosBotV5

./: .gitignore  Cargo.toml  example_config.json
anvil_script/: anvil.py
data/: hardware.json
src/: anvil.rs  config.rs  main.rs  scoreboard.rs  taurus.rs
src/commands/: commands.txt  mod.rs
src/commands/ingame/: eval.rs  mod.rs  score.rs
src/commands/member/: backup.rs  grinder.rs  metadata.rs  mod.rs  reconnect.rs  session.rs
src/commands/public/: age.rs  hardware.rs  invite.rs  iscore.rs  list.rs  mod.rs  score.rs  tps.rs  website.rs  worldsize.rs
src/commands/staff/: mod.rs
