[package]
name = "hypnos-bot-v5"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
http = "1.3.1"
poise = "0.6.1"
serde = "1.0.219"
serde_json = "1.0.140"
timeago = "0.4.2"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tokio-websockets = { version = "0.11.4", features = ["client", "sha1_smol", "fastrand"] }
tungstenite = "0.27.0"
valence_nbt = { version = "0.8.0", features = ["binary"] }
flate2 = "1.0.33"
futures = "0.3.31"
resvg = "0.45.1"
valence_anvil = "0.1.0"
